// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`neon-auth > allow-localhost enable 1`] = `
"
Localhost connections allowed

"
`;

exports[`neon-auth > allow-localhost get 1`] = `
"allow_localhost: true
"
`;

exports[`neon-auth > disable 1`] = `
"
Neon Auth has been disabled

"
`;

exports[`neon-auth > disable 1`] = `
"
Neon Auth has been disabled

"
`;

exports[`neon-auth > disable with delete data 1`] = `
"
Neon Auth has been disabled

"
`;

exports[`neon-auth > domain add 1`] = `
"
Domain "https://myapp.com" added

"
`;

exports[`neon-auth > domain allow-localhost disable 1`] = `
"
Localhost connections restricted

"
`;

exports[`neon-auth > domain allow-localhost enable 1`] = `
"
Localhost connections allowed

"
`;

exports[`neon-auth > domain allow-localhost get 1`] = `
"allow_localhost: true
"
`;

exports[`neon-auth > domain delete 1`] = `
"
Domain "https://example.com" deleted

"
`;

exports[`neon-auth > domain list 1`] = `
"- domain: https://example.com
- domain: https://app.example.com
"
`;

exports[`neon-auth > email-password get 1`] = `
"enabled: true
email_verification_method: link
require_email_verification: false
auto_sign_in_after_verification: true
send_verification_email_on_sign_up: true
send_verification_email_on_sign_in: false
disable_sign_up: false
"
`;

exports[`neon-auth > email-password update 1`] = `
"enabled: true
email_verification_method: link
require_email_verification: true
auto_sign_in_after_verification: true
send_verification_email_on_sign_up: true
send_verification_email_on_sign_in: false
disable_sign_up: false
"
`;

exports[`neon-auth > email-provider get 1`] = `
"type: shared
sender_email: noreply@example.com
sender_name: My App
"
`;

exports[`neon-auth > email-provider test 1`] = `
"success: true
"
`;

exports[`neon-auth > email-provider update 1`] = `
"type: shared
sender_email: noreply@test.com
sender_name: Test App
"
`;


exports[`neon-auth > enable 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
pub_client_key: pk_test_123
secret_server_key: sk_test_456
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
schema_name: neon_auth
table_name: users_sync
base_url: https://auth.test.neon.tech
"
`;

exports[`neon-auth > enable already enabled 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
branch_id: br-sunny-branch-123456
db_name: neondb
base_url: https://auth.test.neon.tech
created_at: 2024-01-01T00:00:00Z
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
"
`;

exports[`neon-auth > oauth-provider add 1`] = `
"id: google
type: shared
client_id: ""
"
`;

exports[`neon-auth > oauth-provider delete 1`] = `
"
OAuth provider "google" deleted

"
`;

exports[`neon-auth > oauth-provider list 1`] = `
"- id: google
  type: shared
  client_id: ""
- id: github
  type: shared
  client_id: ""
"
`;

exports[`neon-auth > oauth-provider update 1`] = `
"id: google
type: standard
client_id: my-client-id
"
`;

exports[`neon-auth > organization get 1`] = `
"enabled: true
organization_limit: 5
allow_user_to_create_organization: true
creator_role: owner
"
`;

exports[`neon-auth > organization update 1`] = `
"enabled: true
organization_limit: 5
allow_user_to_create_organization: true
creator_role: owner
"
`;

exports[`neon-auth > status 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
branch_id: br-sunny-branch-123456
db_name: neondb
base_url: https://auth.test.neon.tech
created_at: 2024-01-01T00:00:00Z
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
"
`;

exports[`neon-auth > status not configured 1`] = `
"
Neon Auth is not configured for this branch

"
`;

exports[`neon-auth > user create 1`] = `
"
User created
  ID:      test-user-id
  Email:   test@example.com
  Name:    Test User

"
`;


exports[`neon-auth > user delete 1`] = `
"
User "test-user-id" deleted

"
`;

exports[`neon-auth > user set-role 1`] = `
"
Roles updated
  User ID:   test-user-id
  Roles:     admin

"
`;

exports[`neon-auth > webhook get 1`] = `
"enabled: false
webhook_url: ""
enabled_events: []
timeout_seconds: 5
"
`;

exports[`neon-auth > webhook update 1`] = `
"enabled: true
webhook_url: ""
enabled_events:
  - user.created
timeout_seconds: 5
"
`;
